--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_riverpod: ^2.4.9
+  riverpod: ^2.4.9
+  go_router: ^13.0.1
+  google_fonts: 6.1.0
+  font_awesome_flutter: ^10.7.0
+  get: ^4.6.6
+  carousel_slider: ^5.0.0
+  awesome_bottom_bar: ^1.2.4
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
